# pytent

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
services/api/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
services/api/tests/: test_main.py
services/functions/: main.py  pyproject.toml
tests/unit/: test_hello.py
tools/codegen/: pyproject.toml
tools/deploy/: pyproject.toml
tools/docgen/: pyproject.toml
