[project]
name = "pytent"
version = "0.0.0"
description = "A project template with UV package manager and CI integration."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "rjoydip", email = "joydipand@gmail.com"}
]
dependencies = [
    "asyncpg>=0.28.0",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "xenon>=0.9.3",
]

[project.scripts]
app = "services.app.main:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["packages"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
annotated_tag = true
changelog_incremental = true

[tool.ruff]
line-length = 120
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # "D",  # pydocstyle - all docstring rules
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = true
force-wrap-aliases = true
combine-as-imports = true
# Group local imports
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages", "services"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov --cov-report=term-missing --cov-report=html"

[tool.pyright]
venvPath = "."
venv = ".venv"
ignore = ['**/*venv/**\*', '**/*dist/**\*', '**/*.pytest_cache/**\*', '**/*.ruff_cache/**\*', '**/*htmlcov/**\*', "**/*test_*.py"]

[tool.xenon]
max-absolute = "B"
max-modules = "A"
max-average = "A"
exclude = ["tests/*", "*/tests/*", "build/*", "dist/*"]
